2005-04-29  Sven de Marothy  <sven@physto.se>

	* gnu/testlet/java/io/Utf8Encoding/mojo.java (negative): Expect
	replacement char.

2005-04-29  Thomas Zander  <zander@kde.org>

	* build.xml: Don't compile classpath specific tests in the ant target
	 since; well that can't work.

2005-04-28  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/java/text/DateFormat/hashCode.java: new test;
	* gnu/testlet/java/text/DecimalFormat/hashCode.java: new test;

2005-04-28  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/java/util/Collections/unmodifiableList.java:
	new test.

2005-04-28  Michael Koch  <konqueror@gmx.de>

	* gnu/testlet/javax/swing/JComboBox/MutableTest1.java,
	gnu/testlet/javax/swing/JComboBox/MutableTest2.java,
	gnu/testlet/javax/swing/JComboBox/SimpleSelectionTest.java:
	Cleaned up mauve tags.

2005-04-28  Michael Koch  <konqueror@gmx.de>

	* gnu/testlet/java/beans/Beans/instantiate_1.java,
	gnu/testlet/java/beans/Introspector/getBeanInfo.java,
	gnu/testlet/java/beans/Introspector/getBeanInfo2.java,
	gnu/testlet/java/beans/Introspector/getBeanInfo2_2.java,
	gnu/testlet/java/beans/XMLDecoder/jdk14.java:
	Cleaned up usage of mauve tags.

2005-04-28  Michael Koch  <konqueror@gmx.de>

	* gnu/testlet/java/util/ArrayList/subList.java,
	gnu/testlet/java/util/LinkedList/subList.java,
	gnu/testlet/java/util/Vector/subList.java:
	Added the needed Uses tags.

2005-04-28  Michael Koch  <konqueror@gmx.de>

	* gnu/testlet/javax/swing/table/DefaultTableModel/addColumn.java,
	gnu/testlet/javax/swing/table/DefaultTableModel/convertToVector.java,
	gnu/testlet/javax/swing/text/html/parser/ParserDelegator/Text.java:
	Added the needed Uses tags.

2005-04-28  Michael Koch  <konqueror@gmx.de>

	* gnu/testlet/javax/swing/table/DefaultTableColumnModel/addColumn.java,
	gnu/testlet/javax/swing/table/DefaultTableColumnModel/addColumnModelListener.java,
	gnu/testlet/javax/swing/table/DefaultTableColumnModel/getColumnModelListeners.java,